unpackaged/objects/Item__c.object
<CustomObject>
  <description>SBU: PREP &amp; ORTHO; Counrty: Japan - Used in Japan as a parallell structure to the global product structure. It's a copy from their previous CRM system with product images and related FAQs.</description>
  <fields>
    <fullName>Additional_Name__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Additional Name</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Catch_Phrase__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Catch Phrase</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Category__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan - Controls Sub-Category</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan - Controls Sub-Category</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>LA</fullName>
        </value>
        <value>
          <fullName>X-ray</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Dealer_Name__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Dealer Name</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Details__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>End_Date__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Hidden_From_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SBU: PREP, ORTH, Country Japan, This field controls the sharing rule and makes sure records with this field ticked is not shared with users. Example of use case is a new product that has not yet been launched but added to the system.</description>
    <inlineHelpText>IF this checkbox is ticked this Item will not be visible to the users.</inlineHelpText>
    <label>Hidden From Users?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Kana__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Kana</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Legacy_ID__c</fullName>
    <description>Stores the old ID number - used for mapping when importing the data</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Old_Product_ID__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Old Product ID</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Product_Image_1__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Product Image 1</label>
    <length>131072</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Product_Image_2__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Product Image 2</label>
    <length>131072</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Product_Image_3__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Product Image 3</label>
    <length>131072</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Replacements__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Replacements</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Search_Keyword__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Search Keyword</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Serial_Number_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Serial Number Management</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Not in use</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Stock_Status_Icon__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan - Need to update when images are in the system!</description>
    <formula>if( ISPICKVAL(  Stock_Status__c , "Stock Only") , 
IMAGE("/servlet/servlet.FileDownload?file=01520000001F4GO", "Stock Only") 
,if( ISPICKVAL( Stock_Status__c, "End of Sales") , 
IMAGE("/servlet/servlet.FileDownload?file=01520000001F4G9", "End of Sales") 
,if( ISPICKVAL( Stock_Status__c, "Stock Only(Part)") , 
IMAGE("/servlet/servlet.FileDownload?file=01520000001F4GY", "Stock Only(Part)") 
,if( ISPICKVAL( Stock_Status__c, "End of Sales(Part)") , 
IMAGE("/servlet/servlet.FileDownload?file=01520000001F4G4", "End of Sales(Part)") 
,""))))</formula>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan - Need to update when images are in the system!</inlineHelpText>
    <label>Stock Status Icon</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Stock_Status__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
    <label>Stock Status</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Stock Only(Part)</fullName>
        </value>
        <value>
          <fullName>Stock Only</fullName>
        </value>
        <value>
          <fullName>End of Sales(Part)</fullName>
        </value>
        <value>
          <fullName>End of Sales</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Sub_Category__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Country: Japan - Dependent on Category - Not defined yet - might be used in future</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan - Dependent on Category</inlineHelpText>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Not defined yet - might be used in future</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Item</label>
  <listViews>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Category__c</columns>
    <columns>Kana__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <nameField>
    <label>Item Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Items</pluralLabel>
  <sharingModel>Private</sharingModel>
</CustomObject>